objects/echosign_dev1__Agreement_Template__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <description>Agreement Templates allow you to predefine default settings and options for your agreements which can save you time and help minimize errors.</description>
    <fields>
        <fullName>echosign_dev1__Account__c</fullName>
        <description>Set the Salesforce ID of the account record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the account record which the agreement should look up to.</inlineHelpText>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Auto_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically send the agreement without displaying the send page. (e.g. triggered workflows) Make sure to add a recipient and a file attachment if using this option.</description>
        <inlineHelpText>Automatically send the agreement without displaying the send page. (e.g. triggered workflows) Make sure to add a recipient and a file attachment if using this option.</inlineHelpText>
        <label>Auto Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Automatic_Reminders__c</fullName>
        <description>Send automatic reminders to signers.</description>
        <inlineHelpText>Send automatic reminders to signers.</inlineHelpText>
        <label>Automatic Reminders</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Every Day, Until Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Week, Until Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Available_Publisher_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On the Master object record, make this agreement template available to senders via the Chatter Feed EchoSign send for signature action.</description>
        <inlineHelpText>On the Master object record, make this agreement template available to senders via the Chatter Feed EchoSign send for signature action.</inlineHelpText>
        <label>Available for Publisher Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Confirm_Password__c</fullName>
        <description>Confirm the password that you want the recipient to input.</description>
        <inlineHelpText>Confirm the password that you want the recipient to input.</inlineHelpText>
        <label>Confirm Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contract__c</fullName>
        <description>Set the Salesforce ID of the contract record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the contract record which the agreement should look up to.</inlineHelpText>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Data_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the data mapping to map EchoSign field inputs from the signed agreement back into Salesforce.</description>
        <inlineHelpText>Select the data mapping to map EchoSign field inputs from the signed agreement back into Salesforce.</inlineHelpText>
        <label>Data Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Data_Mapping__c</referenceTo>
        <relationshipLabel>Agreement Templates</relationshipLabel>
        <relationshipName>Agreement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Days_Until_Expiration__c</fullName>
        <description>Set the number of days before the agreement expires.</description>
        <inlineHelpText>Set the number of days before the agreement expires.</inlineHelpText>
        <label>Days Until Expiration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set as default template for new agreements.</description>
        <inlineHelpText>Set as default template for new agreements.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Email_Copy_To__c</fullName>
        <description>Send copies of the agreement to the specified email addresses.</description>
        <inlineHelpText>Send copies of the agreement to the specified email addresses.</inlineHelpText>
        <label>Email Copy To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__External_Signers_Verification_Method__c</fullName>
        <description>Ensure that before external signers can view or sign the document, they have to verify their identity.</description>
        <inlineHelpText>Ensure that before external signers can view or sign the document, they have to verify their identity.</inlineHelpText>
        <label>External Signers Verification Method</label>
        <picklist>
            <picklistValues>
                <fullName>Password to sign agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge based authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web identity authentication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Hosted_Signing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable hosted in-person signing.</description>
        <inlineHelpText>Enable hosted in-person signing.</inlineHelpText>
        <label>Enable Hosted Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Internal_Signers_Verification_Method__c</fullName>
        <description>Ensure that before internal signers can view or sign the document, they have to verify their identity.</description>
        <inlineHelpText>Ensure that before internal signers can view or sign the document, they have to verify their identity.</inlineHelpText>
        <label>Internal Signers Verification Method</label>
        <picklist>
            <picklistValues>
                <fullName>Password to sign agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge based authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web identity authentication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Language__c</fullName>
        <description>Select the language of the recipients.</description>
        <inlineHelpText>Select the language of the recipients.</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese (China)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Taiwan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech (Czech Republic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish (Denmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch (Netherlands)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (United Kingdom)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (United States)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish (Finland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French (France)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German (Germany)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icelandic (Iceland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian (Indonesia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian (Italy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese (Japan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean (South Korea)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malay (Malaysia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian (Norway)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish (Poland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Portugal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian (Russia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish (Spain)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish (Sweden)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai (Thailand)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish (Turkey)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese (Vietnam)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Master_Object_Type__c</fullName>
        <description>Specify the Salesforce object that will be referenced for this agreement template. (e.g. Opportunity, Lead)</description>
        <inlineHelpText>Specify the Salesforce object that will be referenced for this agreement template. (e.g. Opportunity, Lead)</inlineHelpText>
        <label>Master Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Merge_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the merge mapping to merge Salesforce fields into the EchoSign agreement before it is sent for signature.</description>
        <inlineHelpText>Select the merge mapping to merge Salesforce fields into the EchoSign agreement before it is sent for signature.</inlineHelpText>
        <label>Merge Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>Agreement Templates</relationshipLabel>
        <relationshipName>Agreement_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Message__c</fullName>
        <description>Enter a message that will be sent to the recipients.</description>
        <inlineHelpText>Enter a message that will be sent to the recipients.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Name__c</fullName>
        <defaultValue>&quot;EchoSign Agreement&quot;</defaultValue>
        <description>Enter a name for the agreement.</description>
        <inlineHelpText>Enter a name for the agreement.</inlineHelpText>
        <label>Agreement Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Opportunity__c</fullName>
        <description>Set the Salesforce ID of the opportunity record which the agreement should look up to.</description>
        <inlineHelpText>Set the Salesforce ID of the opportunity record which the agreement should look up to.</inlineHelpText>
        <label>Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Password__c</fullName>
        <description>Enter a password that you want the recipient to input.</description>
        <inlineHelpText>Enter a password that you want the recipient to input.</inlineHelpText>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Prefer_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When sending an agreement for written signature, use the fax number for the contact if available</description>
        <inlineHelpText>When sending an agreement for written signature, use the fax number for the contact if available</inlineHelpText>
        <label>Use Fax Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Preview_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable signers to preview and position fields on the document before agreement is sent for signature.</description>
        <inlineHelpText>Enable signers to preview and position fields on the document before agreement is sent for signature.</inlineHelpText>
        <label>Enable Preview and Position Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sender_User__c</fullName>
        <description>When the agreement is auto sent or sent using an automated workflow, the agreement will be sent on behalf of the user specified by this field. If not specified, the current context user will be used as usual.</description>
        <inlineHelpText>When the agreement is auto sent or sent using an automated workflow, the agreement will be sent on behalf of the user specified by this field. If not specified, the current context user will be used as usual.</inlineHelpText>
        <label>Send On Behalf Of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Sign_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set a password the recipient needs to enter to sign the agreement.</description>
        <inlineHelpText>Set a password the recipient needs to enter to sign the agreement.</inlineHelpText>
        <label>Password to Sign Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signature_Flow__c</fullName>
        <description>Set the recipient order for signing documents.</description>
        <inlineHelpText>Set the recipient order for signing documents.</inlineHelpText>
        <label>Signature Flow</label>
        <picklist>
            <picklistValues>
                <fullName>Recipients sign in order</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recipients sign in any order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signature_Order__c</fullName>
        <description>Enable the sender to also sign the agreement by selecting a signature order.</description>
        <inlineHelpText>Enable the sender to also sign the agreement by selecting a signature order.</inlineHelpText>
        <label>Sender Signature Order</label>
        <picklist>
            <picklistValues>
                <fullName>Recipients sign first, then sender signs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sender signs first, then recipients sign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Signature_Type__c</fullName>
        <description>Send for electronic signature or request written signature returned by fax.</description>
        <inlineHelpText>Send for electronic signature or request written signature returned by fax.</inlineHelpText>
        <label>Signature Type</label>
        <picklist>
            <picklistValues>
                <fullName>e-Signature</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Written Signature</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__View_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</description>
        <inlineHelpText>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</inlineHelpText>
        <label>Password protect the signed document</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement Template</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>echosign_dev1__Confirm_Password</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  AND(  
    OR( echosign_dev1__View_Password__c ,  echosign_dev1__Sign_Password__c  ) ,   
    NOT(  echosign_dev1__Password__c =  echosign_dev1__Confirm_Password__c ) 
  ),
  AND(  
    OR(  
      TEXT(  echosign_dev1__External_Signers_Verification_Method__c  ) = &apos;Password to Sign Agreement&apos;,  
      TEXT(  echosign_dev1__Internal_Signers_Verification_Method__c  ) = &apos;Password to Sign Agreement&apos; 
    ),
    NOT(  echosign_dev1__Password__c =  echosign_dev1__Confirm_Password__c ) 
  )
)</errorConditionFormula>
        <errorDisplayField>echosign_dev1__Confirm_Password__c</errorDisplayField>
        <errorMessage>Confirm password does not match the password that you want the recipient to input.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Enabled_Password_Set</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  OR(  echosign_dev1__View_Password__c ,  echosign_dev1__Sign_Password__c  ) , OR( ISNULL( echosign_dev1__Password__c ), ISBLANK( TRIM( echosign_dev1__Password__c ) )  )  )</errorConditionFormula>
        <errorDisplayField>echosign_dev1__Password__c</errorDisplayField>
        <errorMessage>Enter a password that you want the recipient to input.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Maximum_Expiration_Days</fullName>
        <active>true</active>
        <errorConditionFormula>echosign_dev1__Days_Until_Expiration__c &gt; 180</errorConditionFormula>
        <errorDisplayField>echosign_dev1__Days_Until_Expiration__c</errorDisplayField>
        <errorMessage>There is a maximum of 180 days before document expiration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Preview_Hosted_With_Auto_Send</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( echosign_dev1__Hosted_Signing__c, echosign_dev1__Preview_Position__c ),  echosign_dev1__Auto_Send__c )</errorConditionFormula>
        <errorMessage>Enabling in-person or preview/position fields is not allowed with auto send enabled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>echosign_dev1__Written_Without_Revisions</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  TEXT(echosign_dev1__Signature_Type__c) = &apos;Written Signature&apos;,
  false
)</errorConditionFormula>
        <errorMessage>Suggesting revisions is not possible with a written signature.</errorMessage>
    </validationRules>
</CustomObject>